# frx-labs

./: .dockerignore  .env.example  .gitignore  .npmrc  Cargo.toml  Dockerfile  Dockerfile.ai-engine  Dockerfile.api  Dockerfile.backend  Dockerfile.chain-runner  Dockerfile.dashboard  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json
apps/ai-engine/: Dockerfile  pyproject.toml  requirements.txt
apps/api/: Cargo.toml  Dockerfile
apps/api/data/: sui_usd_daily.csv
apps/api/migrations/: 001_initial_schema.sql  004_strategies.sql  007_remove_seed_agents.sql
apps/api/src/: auth.rs  error.rs
apps/api/src/models/: agent.rs  mod.rs  policy.rs  strategy.rs  user.rs  wallet.rs
apps/api/src/routes/auth/: challenge.rs  me.rs  mod.rs  verify.rs
apps/api/src/routes/shield/: agents.rs  alerts.rs  execute.rs  intent.rs  keys.rs  market.rs  mod.rs  strategies.rs
apps/api/src/routes/wallet/: mod.rs  setup.rs
apps/api/src/services/: demo_runner.rs  execution_gateway.rs  firewall.rs  jwt.rs  log.rs  market_data.rs  price_feed.rs  risk_client.rs  sui.rs  sui_auth.rs  walrus_audit.rs
docs/: DEPLOYMENT.md  architecture.md  db-schema.md  deploy-railway.md  deploy-vercel.md  move-design.md  openapi.yaml  roadmap.md  wallet-design.md
frontend/: tailwind.config.js  vercel.json
railway/: ai-engine.json  api.json  chain-runner.json  dashboard.json  frontend.json
scripts/: demo.sh  deploy-wallet-testnet.sh  docker-backend-entrypoint.sh  docker-build.sh  publish-wallet-onchain.sh
(+122 files in other folders)
