[package]
name = "frx-labs-api"
version.workspace = true
edition.workspace = true
default-run = "frx-labs-api"

[[bin]]
name = "frx-labs-api"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
bcs = { workspace = true }
blake2 = { workspace = true }
ed25519-dalek = { workspace = true }
k256 = { workspace = true }
p256 = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
